org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/valid/CallOperation/CallOperation_paramTypes_002/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project CallOperation_paramTypes_002 {
	import "${project.baseUri}/002_CallOperation_paramTypes.kmt"
}
