org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Assignment/Assignment_002/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/LATEST"

importProject library_standard
	

	
//metamodel test_hello
project VariableDecl {

	
	import "${project.baseUri}/001_AssignmentTest02.kmt" 

}